--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,18 @@ margin: 100px 10px ;
     border: solid grey 2px;
     height: 100px;
 }
+
+
+.menu{
+    background-color: #fff;
+}
+.menu .row .card1{
+    width: 80px;
+    /* height: auto; */
+    box-shadow: grey;
+    color: red;
+}
+.menu .row .card1{
+    height: 100px;
+    width:  auto;
+}
