--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,40 @@ body {
     box-sizing: border-box;
     font-family: "Poppins";
 }
-.wrapper img{
-    z-index: +1;
-}
+
 .container {
     height: 80vh;
     background: #fff;
     position: relative;
     overflow: hidden !important;
+    display: flex;
 }
+.container .welcome{
+    width: 50%;
+     margin-top: 128px;
+     /* margin-left: 10px; */
+}
+.container .welcome .bold{
+   font-size: 55px;
+   padding-left: 46px;
+}
+.container .welcome .about-text{
+    font-size: 21px;
+    padding-left: 46px;
 
+}
+.container .wel-image{
+    width: 50%;
+    z-index: 1;
+    
+}
+.container .wel-image img {
+    object-position: 50% 50%;
+    margin-top: 50px;
+    height: 500px;
+    
+
+}
 .container::after {
     content: "";
     position: absolute;
