--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,8 @@ width: 300px;
 .discover .content {
     padding-top: 40px;
     width: 50%;
-    font-size: 50px;
+    font-size: 45px;
+    font-weight: 700;
     
 }
 .discover .screen{
@@ -299,10 +300,10 @@ list-style-type: none;
 .footer .copy-right{
     display: flex;
     justify-content: space-evenly;
+    padding-top: 8px;
 }
 .footer .copy-right .social-media{
     display: flex;
-    justify-content: space-evenly;
-    
+    justify-content: space-evenly;   
     
 }
