--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,10 @@ body {
     background-color: #F7FDF6;
     
 }
+.advert .col1 .fa{
+    
+
+}
 .advert .col1 {
     border: solid #AB888B 0.7px;
     border-radius: 10px;
